<?xml version="1.0"?>
<package format="2">

	<name>navio</name>
	<version>0.0.0</version>
	<description>Collection of drivers and examples for Navio 2 - autopilot shield for Raspberry Pi.</description>
	<maintainer email="masa0u0masa1215@gmail.com">Masayoshi Dohi</maintainer>
	<license>BSD 3-Clause</license>

	<buildtool_depend>catkin</buildtool_depend>

</package>
